# screenrecord

./: .gitignore  README.md  pyproject.toml  setup.py
screenrecord/: cli.py  srecord.py
tests/: test_screenrecord.py  test_update.py
